# Epsilon

./: CHANGELOG.md  Epsilon.cabal  main.e
app/: Main.hs
app/Epsilon/: CliOptions.hs  Interpreter.hs  Parser.hs  Serialization.hs
app/Epsilon/Internal/: Classes.hs  Constructs.hs  Interpreter.hs  Parser.hs  SemanticAnalyzer.hs
stdlib/: builtin.e
